syntax = "proto3";

package encryption.v1;

option go_package = "grpc-encryption-service/internal/pb;pb";


service EncryptionService {
  rpc Encrypt(stream EncryptRequest) returns (stream EncryptResponse) {}
  rpc Decrypt(stream DecryptRequest) returns (stream DecryptResponse) {}
  rpc GenerateKeyPair(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {}
  rpc RotateKeyPair(RotateKeyPairRequest) returns (RotateKeyPairResponse) {}
}

message RotateKeyPairResponse {
  string id = 1;
}
message GenerateKeyPairResponse {
  string id = 1;
}
message GenerateKeyPairRequest {

  string algorithm = 1;

  int32 key_size = 2;
}

message RotateKeyPairRequest {

  string key_ref = 1;

  string algorithm = 2;
  int32 key_size = 3;
}

message EncryptRequest {
  // Data chunk to encrypt
  bytes plaintext = 1;
  
  // Sequence number for ordering
  uint64 seq = 2;
}

message EncryptResponse {
  bytes ciphertext = 1;
  uint64 seq = 2;
  string error = 3;
}

message DecryptRequest {
  // Data chunk to decrypt
  bytes ciphertext = 1;
  
  // Sequence number for ordering
  uint64 seq = 2;
}

message DecryptResponse {
  bytes plaintext = 1;
  uint64 seq = 2;
  string error = 3;
}
